examreportforexam00on14012017025748/0-1-only_a.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r4p14.42.us.org
Darwin 15.6.0 x86_64
$> date
Fri Jan 13 20:53:28 PST 2017
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/c++/4.2.1
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2017/piscine-c-exam00/exam_20170114/rfleming

= Git history ==================================================================
$> git -C /var/folders/jc/7xr6qgn92r7gnhxsp775n6q40000gp/T/tmpiRtjP7/user log --pretty='%H - %an, %ad : %s'
249ac95fd34250af85b8f8428d0846b3fbd57eec - Exam 42, Fri Jan 13 20:53:08 2017 -0800 : another commit of the same exercise over again, this time in the right folder
04d4490cb683aad59de6e1dc00e08aa20c7c4a2d - Exam 42, Fri Jan 13 20:39:20 2017 -0800 : i can't get past the errors on the second term of the arguments to  write(). c'est la vie.
 
= Collected files ==========================================
$> ls -lAR /var/folders/jc/7xr6qgn92r7gnhxsp775n6q40000gp/T/tmpiRtjP7/user
total 8
-rw-r--r--  1 deepthought  deepthought  575 Jan 13 20:53 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Jan 13 20:53 only_a
drwxr-xr-x  3 deepthought  deepthought  102 Jan 13 20:53 subjects

/var/folders/jc/7xr6qgn92r7gnhxsp775n6q40000gp/T/tmpiRtjP7/user/only_a:
total 8
-rw-r--r--  1 deepthought  deepthought  93 Jan 13 20:53 only_a.c

/var/folders/jc/7xr6qgn92r7gnhxsp775n6q40000gp/T/tmpiRtjP7/user/subjects:
total 0
drwxr-xr-x  3 deepthought  deepthought  102 Jan 13 20:53 only_z

/var/folders/jc/7xr6qgn92r7gnhxsp775n6q40000gp/T/tmpiRtjP7/user/subjects/only_z:
total 8
-rw-r--r--  1 deepthought  deepthought  92 Jan 13 20:53 only_z.c
 
= only_a =======================================================================
$> gcc -Wextra -Wall -Werror only_a.c -o user_exe 
only_a.c:4:1: error: expected identifier or '('
{
^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
